# dedroom

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.yaml  dedroom.yaml  dedroom_benchmark_results.md  deny.toml  pyproject.toml
crates/dedroom-benchmark/: Cargo.toml
crates/dedroom-benchmark/src/: main.rs
crates/dedroom-cli/: Cargo.toml
crates/dedroom-cli/src/: copilot_auth.rs  main.rs  runtime_env.rs  unwrap_rtk.rs
crates/dedroom-core/: Cargo.toml
crates/dedroom-core/benches/: loop_history_bench.rs  pipeline_bench.rs
crates/dedroom-core/examples/: basic.rs  bench.rs  compression_quality.rs  demo_self_healing.rs
crates/dedroom-core/src/: config.rs  lib.rs  pipeline.rs
crates/dedroom-core/src/attribution/: engine.rs  mod.rs
crates/dedroom-core/src/ccr/: mod.rs  store.rs
crates/dedroom-core/src/compression/: code_compressor.rs  log_compressor.rs  mod.rs  policy.rs  router.rs  smart_crusher.rs  text_compressor.rs
crates/dedroom-core/src/embedding/: embedder.rs  mod.rs
crates/dedroom-core/src/healing/: instincts.rs  memory.rs  mod.rs  mutations.rs
crates/dedroom-core/src/intelligence/: judgment.rs  learning.rs  mentor.rs  mod.rs  store.rs  trust.rs
crates/dedroom-core/src/loop_detection/: adaptive.rs  canonical.rs  engine.rs  history.rs  mod.rs  semantic.rs
crates/dedroom-core/src/security/: mod.rs  redaction.rs
crates/dedroom-core/src/telemetry/: event_log.rs  mod.rs  savings_ledger.rs
crates/dedroom-parity/: Cargo.toml
crates/dedroom-parity/src/: lib.rs
crates/dedroom-proxy/: Cargo.toml
crates/dedroom-proxy/src/: connect.rs  intercept.rs  main.rs  proxy.rs
crates/dedroom-proxy/src/handlers/: mod.rs
crates/dedroom-py/: Cargo.toml  build.rs
crates/dedroom-py/src/: lib.rs
crates/dedroom-tui/: Cargo.toml
crates/dedroom-tui/src/: api.rs  app.rs  events.rs  export.rs  main.rs  ui.rs
crates/dedroom-tui/src/charts/: mod.rs  sparkline.rs
crates/dedroom-tui/src/components/: header.rs  healing_panel.rs  loops_panel.rs  mod.rs  savings_overview.rs  summary_export.rs  timeline.rs  tool_breakdown.rs  waste_panel.rs
demos/: README.md  demo1_self_healing.sh  demo2_savings.sh  demo3_quickstart.sh  record_all.sh
demos/casts/: demo1_self_healing.cast  demo2_savings.cast  demo3_quickstart.cast
examples/: security_audit_agent.py
python/: README.md  build.py
python/dedroom/: __init__.py  cli.py
python/tests/: test_core.py
scripts/: record_demo1_self_healing.sh  record_demo2_savings.sh  record_demo3_quickstart.sh
