[package]
name = "dedroom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified agent runtime: loop detection + context compression"

[dependencies]
# Workspace deps
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
serde_yaml.workspace = true
blake3.workspace = true
thiserror.workspace = true
anyhow.workspace = true
regex.workspace = true
tracing.workspace = true
lru.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
rusqlite = { workspace = true, optional = true }

[features]
default = []
ml = []
sqlite = ["rusqlite"]
# Local

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "loop_history_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false
