[package]
name = "dedroom-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DedrooM proxy server — loop detection + context compression for AI agents"

[dependencies]
dedroom-core = { path = "../dedroom-core" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
futures.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
serde_yaml.workspace = true
hyper.workspace = true
http.workspace = true
indicatif = "0.18.6"
owo-colors = "4.3.0"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3"
