[package]
name = "dedroom-py"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for DedrooM"

[lib]
crate-type = ["cdylib"]

[dependencies]
dedroom-core = { path = "../dedroom-core" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py312"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
